--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ li {
   display: grid;
   place-content: center;
   gap: 1rem;
+  overflow: hidden;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 0.4fr auto 0.3fr 0.5fr 0.5fr 1fr 0.25fr 0.15fr;
   grid-template-areas:
@@ -918,6 +919,7 @@ input {
     margin: 0 auto;
     height: fit-content;
     padding: 1rem;
+    overflow: hidden;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.3fr 1fr 0.2fr 0.3fr auto 0.1fr 0.2fr;
     grid-template-areas:
@@ -1104,6 +1106,7 @@ input {
     display: grid;
     place-content: center;
     gap: 1rem;
+    overflow: hidden;
     grid-template-columns: 0.5fr 1fr 0.5fr 0.5fr 1.8fr 0.6fr 0.9fr;
     grid-template-rows: 1fr 1fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
     grid-auto-flow: row;
@@ -1305,6 +1308,7 @@ input {
     margin: 0 auto;
     display: grid;
     place-content: center;
+    overflow: hidden;
     gap: 1rem;
     grid-template-columns: 0.5fr 1fr 0.5fr 0.5fr 1.8fr 0.6fr 0.9fr;
     grid-template-rows: 1fr 1fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
