--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   --logo-yellow: #ffd876;
   --blue-sky: #62bfeb;
   --midnight-sky: #172334;
-  --border-radius: 2.4rem;
+  --border-radius: 2.8rem;
 }
 
 #loaderlogo svg path {
@@ -139,11 +139,53 @@ li {
 .welcome {
   grid-area: welcome;
   padding: 0.7rem;
+  position: relative;
 }
 
 .welcome .container {
-  width: 100%;
-  border-radius: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    'info like'
+    'counter counter';
+}
+
+.welcome .container .visits_counter {
+  grid-area: counter;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.visits_counter span {
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.welcome .container .icon {
+  position: relative;
+  cursor: pointer;
+}
+
+.welcome .container .icon::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: -20px;
+  width: auto;
+  padding: 5px;
+  border-radius: 6px;
+  background: var(--neutral-300);
+  color: var(--neutral-400);
+  font-weight: 600;
+  text-align: center;
+  display: none;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.welcome .container .icon:hover::after {
+  display: block;
 }
 
 .profile {
@@ -165,11 +207,11 @@ li {
   justify-content: center;
   position: relative;
   background: linear-gradient(40deg, #ff487a 20.77%, #ffd876 90.6%);
-  clip-path: circle(40%);
+  clip-path: circle(36%);
 }
 
 .profile .profile-avatar img {
-  width: 70%;
+  width: 60%;
 }
 
 .profile .profile-name {
@@ -194,8 +236,11 @@ li {
   margin-top: 1rem;
 }
 .profile .profile-about p {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   color: var(--neutral-400);
-  padding: 0rem 2.2rem;
+  /* padding: 0rem 2.2rem; */
   font-size: 2rem;
   font-weight: 400;
 }
@@ -308,12 +353,13 @@ li {
 .slide-container {
   margin: 0 9px;
   overflow: hidden;
+  border-radius: 10px;
 }
 
 .card-slide {
   width: 312px;
   background-color: var(--pure-white);
-  /* border-radius: 2px; */
+  border-radius: 10px;
 }
 
 .card-slide .image-box {
@@ -323,6 +369,7 @@ li {
 .card-slide .image-box img {
   width: 100%;
   height: 100%;
+  border-radius: 10px 10px 0 0;
 }
 
 .card-slide .project-details {
@@ -336,6 +383,7 @@ li {
   padding: 1rem;
   background-color: var(--pure-white);
   border-top: 1px solid var(--neutral-300);
+  border-radius: 0 0 10px 10px;
 }
 
 .name-job {
@@ -407,13 +455,14 @@ li {
   color: var(--neutral-600);
   height: 30px;
   width: 30px;
-  background: var(--neutral-300);
+  background: #ff9c78;
   border-radius: 50%;
 }
 
 .swiper-navBtn::before,
 .swiper-navBtn::after {
   font-size: 12px;
+  font-weight: bold;
 }
 
 .swiper-pagination-bullet {
@@ -471,9 +520,9 @@ li {
   display: block;
 }
 
-.html5 svg {
-  width: 26px;
-  height: 30px;
+.stacks-icons svg {
+  width: 34px;
+  height: 38px;
 }
 
 .stacks .ico svg path {
@@ -513,13 +562,13 @@ li {
   fill: var(--neutral-100);
 }
 
-.stacks .javascript {
+/* .stacks .javascript {
   background: linear-gradient(
     41deg,
     var(--logo-pink) 0%,
     var(--logo-yellow) 100%
   );
-}
+} */
 
 .descriptions {
   display: flex;
@@ -1135,7 +1184,15 @@ input {
   }
 
   .resume a {
-    font-size: 2.5rem;
+    font-size: 4rem;
+    font-weight: 900;
+    line-height: 35px;
+  }
+
+  .resume {
+    display: flex;
+    align-items: center;
+    text-align: center;
   }
 
   .select-mode .avatar img {
@@ -1241,8 +1298,8 @@ input {
   }
 
   .stacks .ico {
-    width: 5rem;
-    height: 5rem;
+    width: 8rem;
+    height: 8rem;
   }
 
   .stacks-icons {
@@ -1304,7 +1361,7 @@ input {
   .apple-grid {
     max-width: 1600px;
     height: 100vh;
-    padding: 4rem 5rem;
+    padding: 7rem 7rem;
     margin: 0 auto;
     display: grid;
     place-content: center;
@@ -1328,15 +1385,25 @@ input {
     display: block;
   }
 
+  .brand-logo img {
+    height: 8.5rem;
+  }
+
   .hello-message h2 {
     font-size: 7rem;
   }
 
-  .profile .profile-about p {
-    font-size: 1.7rem;
-    padding: 0 1.2rem;
+  .profile .container {
+    gap: 2rem;
   }
 
+  .profile .profile-about p {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.7rem;
+    padding: 0 1.2rem;
+    gap: 1rem;
+  }
   .brand {
     display: grid;
     place-items: center;
@@ -1345,6 +1412,10 @@ input {
   .brand-logo img {
     width: 100%;
     padding-left: 10px;
+  }
+
+  .stacks {
+    gap: 2.5rem;
   }
 
   .stacks-icons {
@@ -1375,16 +1446,24 @@ input {
   }
 
   .card-container {
-    width: 88%;
-    padding: 30px 0;
+    width: 100%;
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0 6px;
   }
 
-  .select-mode {
+  /* .select-mode {
     background: var(--blue-sky);
-  }
+  } */
 
-  .select-mode .avatar img {
+  /* .select-mode .avatar img {
     transition: all 1s;
+  } */
+
+  .select-mode .sun,
+  .moon {
+    width: 30rem;
   }
 
   @keyframes sunrise {
