--- a/style.css
+++ b/style.css
@@ -240,8 +240,8 @@ li {
   flex-direction: column;
   gap: 1rem;
   color: var(--neutral-400);
-  /* padding: 0rem 2.2rem; */
-  font-size: 2rem;
+  padding: 0 2rem 2rem;
+  font-size: 1.8rem;
   font-weight: 400;
 }
 
@@ -488,8 +488,8 @@ li {
 
 .stacks .ico {
   background-color: var(--neutral-200);
-  width: 5rem;
-  height: 5rem;
+  width: 8rem;
+  height: 8rem;
   align-items: center;
   justify-content: center;
   border-radius: 1rem;
@@ -981,6 +981,14 @@ input {
       'select-mode contact';
   }
 
+  .profile .profile-avatar {
+    clip-path: circle(26%);
+  }
+
+  .profile .profile-avatar img {
+    width: 40%;
+  }
+
   .profile .profile-about p {
     padding-inline: 6rem;
   }
@@ -998,8 +1006,8 @@ input {
   }
 
   .stacks .ico {
-    width: 5rem;
-    height: 5rem;
+    width: 6rem;
+    height: 6rem;
   }
 
   .select-mode .avatar img {
@@ -1079,7 +1087,8 @@ input {
   }
 
   .resume a {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    text-align: center;
   }
 
   .hello-message .stroke {
@@ -1115,8 +1124,8 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 4rem;
-    height: 4rem;
+    width: 7rem;
+    height: 7rem;
   }
 
   .stacks-icons {
@@ -1228,6 +1237,14 @@ input {
 
   .profile {
     padding: 2rem 1.5rem;
+  }
+
+  .profile .profile-avatar {
+    clip-path: circle(36%);
+  }
+
+  .profile .profile-avatar img {
+    width: 60%;
   }
 
   .profile .profile-about p {
