--- a/style.css
+++ b/style.css
@@ -6,14 +6,12 @@
 
 html,
 body {
-  background-color: var(--neutral);
-  transition: background 0.3s ease;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
 
 :root {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 62.5%; /* 1rem === 10px*/
 
   --neutral-8: #000000;
@@ -25,46 +23,7 @@ body {
   --neutral-2: #f8f8f8;
   --neutral-1: #ffffff;
 
-  --logo-pink: #ff3d7b;
-  --logo-yellow: #ffd876;
-  --blue-sky: #74c4e6;
-  --midnight-sky: #0d0030;
-  --border-radius: 2.8rem;
-}
-
-#loaderlogo svg path {
-  fill: var(--neutral-600);
-}
-
-.loader_bg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 4rem;
-  position: fixed;
-  z-index: 9999;
-  background-color: var(--neutral-100);
-  width: 100vw;
-  height: 100vh;
-}
-
-#loader {
-  display: flex;
-  align-items: center;
-  position: relative;
-  height: 6px;
-  width: 250px;
-  background-color: var(--neutral-400);
-  border: none;
-  border-radius: 1rem;
-}
-
-#loader #progress {
-  background-color: #fff;
-  width: 0;
-  height: 6px;
-  border-radius: 1rem;
+  --border-radius: 2.4rem;
 }
 
 a {
@@ -76,23 +35,12 @@ li {
   list-style: none;
 }
 
-.flex {
-  display: flex;
-}
-
-.pd-1 {
-  padding: 1rem;
-}
-
 .card {
   background-color: var(--neutral-1);
   border-radius: var(--border-radius);
-  /* box-shadow: 4px 12px 40px 6px rgba(0, 0, 0, 0.07); */
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 20px 0px;
-  /* z-index: 9999; */
 }
 
-.apple-grid {
+.bento-grid {
   max-width: 540px;
   height: fit-content;
   padding: 1rem;
@@ -101,944 +49,9 @@ li {
   place-content: center;
   gap: 1rem;
   overflow: hidden;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto 1.8fr 1fr 0.5fr 0.5fr;
-  grid-template-areas:
-    'profile profile'
-    'resume resume'
-    'stacks stacks'
-    'mail mail'
-    'projects projects'
-    'select-mode contact'
-    'select-mode contact';
-}
-
-.profile {
-  grid-area: profile;
-  position: relative;
-  background-color: transparent;
-}
-
-.hello {
-  display: none;
-}
-
-.welcome {
-  display: none;
-}
-
-.resume {
-  grid-area: resume;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.resume-block {
-  width: 100%;
-  height: 9rem;
-  background-color: var(--neutral-4);
-  border-radius: 1.6rem;
-  display: flex;
-  align-items: center;
-  gap: 3rem;
-}
-
-.above-block {
-  width: 75%;
-  height: 100%;
-  background-color: var(--neutral-2);
-  border-radius: 1.6rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid var(--neutral-3);
-}
-
-.above-block span {
-  font-size: 2.4rem;
-  text-align: center;
-  font-weight: bold;
-  color: var(--neutral-6);
-}
-
-.brand-block {
-  display: flex;
-  width: 100%;
-  height: 8rem;
-  border: 1px solid var(--neutral-2);
-  border-radius: 1.6rem;
-  align-items: center;
-  padding: 1rem;
-}
-
-.brand-block img {
-  height: 6rem;
-}
-
-.hello {
-  width: 100%;
-  height: 100%;
-  grid-area: hello;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.hello-message {
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  transform-style: preserve-3d;
-  perspective: 1000px;
-  transform: translateZ(20px);
-}
-
-.hello-message h2 {
-  font-size: 6.7rem;
-  text-align: center;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 0.9;
-  color: var(--neutral-600);
-  position: absolute;
-  background: linear-gradient(
-    41deg,
-    var(--logo-pink) 0%,
-    var(--logo-yellow) 100%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  z-index: 100;
-  transform-style: preserve-3d;
-  perspective: 1000px;
-  transform: translateZ(20px);
-}
-
-.hello-message .stroke {
-  width: 320px;
-}
-
-.hello-message h2::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    41deg,
-    var(--logo-pink) 0%,
-    var(--logo-yellow) 100%
-  );
-  filter: blur(20px);
-  transform: translateY(10px) scale(1);
-  opacity: 0.3;
-}
-
-.projects {
-  grid-area: projects;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  /* background-image: url(./assets/grid.svg); */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.projects .title {
-  position: absolute;
-}
-
-.stacks {
-  grid-area: stacks;
-  gap: 1.5rem;
-  align-items: center;
-  flex-direction: column;
-  overflow: hidden;
-}
-
-/* .flip-card-back .title, */
-.projects .title,
-.stacks .title {
-  font-size: 2.5rem;
-  color: var(--neutral-5);
-  border-radius: 80px;
-  background: var(--neutral-2);
-  letter-spacing: -0.9px;
-  align-items: center;
-  margin-top: 1rem;
-  padding: 0 1rem;
-}
-
-.mail {
-  grid-area: mail;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  padding: 1rem;
-}
-
-.mail .img {
-  width: 95%;
-  position: absolute;
-  top: 40%;
-  transform: translateY(-60%);
-}
-
-.mail .img img {
-  width: 100%;
-  max-width: 100%;
-}
-
-.button-copy {
-  display: flex;
-  width: 95%;
-  height: 50px;
-  justify-content: center;
-  background: var(--neutral-7);
-  bottom: 10px;
-  border-radius: 1.5rem;
-  position: absolute;
-  cursor: pointer;
-  transition: 0.8s all ease;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  overflow: hidden;
-}
-
-.button-copy.copied {
-  display: flex;
-  align-items: center;
-  background: var();
-  border: 1px solid var(--neutral-7);
-}
-
-.button-copy i {
-  font-size: 1.2rem;
-}
-
-.words span {
-  display: block;
-  text-align: center;
-  padding-block: 1.5rem;
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: var(--neutral-2);
-  animation: spin_words 15s infinite;
-}
-
-@keyframes spin_words {
-  10% {
-    transform: translateY(-105%);
-  }
-  25% {
-    transform: translateY(-100%);
-  }
-  35% {
-    transform: translateY(-205%);
-  }
-  50% {
-    transform: translateY(-200%);
-  }
-  60% {
-    transform: translateY(-305%);
-  }
-  75% {
-    transform: translateY(-300%);
-  }
-  85% {
-    transform: translateY(-405%);
-  }
-  100% {
-    transform: translateY(-400%);
-  }
-}
-
-.mail .copy-mail {
-  display: none;
-}
-
-.select-mode {
-  grid-area: select-mode;
-  flex-direction: column;
-  align-items: center;
-  border: 2px dashed var(--violet-grad);
-  overflow: hidden;
-  border-radius: 20px;
-  background: var(--blue-sky);
-  position: relative;
-}
-
-.select-mode.night {
-  border-radius: 20px;
-  background-color: #192237;
-}
-
-input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-}
-
-.moon {
-  display: none;
-  position: absolute;
-  top: 7rem;
-  animation: moonshine 1s forwards;
-  transition: all 1s ease;
-}
-
-.select-mode .sun {
-  display: block;
-  position: absolute;
-  top: 6.8rem;
-  animation: sunrise 1s forwards;
-}
-
-@keyframes sunrise {
-  0% {
-    top: 20rem;
-    opacity: 0;
-  }
-  100% {
-    top: 6.8rem;
-    opacity: 1;
-  }
-}
-
-@keyframes moonshine {
-  0% {
-    top: 20rem;
-    opacity: 0;
-  }
-  100% {
-    top: 7rem;
-    opacity: 1;
-  }
-  0% {
-    top: 20rem;
-    opacity: 0;
-  }
-}
-
-.select-mode .avatar {
-  position: absolute;
-  top: 0;
-  perspective: 1000px;
-  z-index: 999;
-}
-
-.memoji-face {
-  transition: all 1.5s cubic-bezier(0.7, -0.5, 0.3, 1.8);
-  transform-style: preserve-3d;
-}
-
-.avatar.active .memoji-face {
-  transform: rotateY(180deg);
-}
-
-.front,
-.back {
-  width: 100%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  left: 0;
-  backface-visibility: hidden;
-}
-
-.front {
-  width: 100%;
-  backface-visibility: hidden;
-}
-
-.back {
-  transform: rotateY(180deg);
-  position: absolute;
-}
-
-.select-mode .avatar img {
-  width: 100%;
-  transition: all 1s;
-}
-
-.toggle-btn {
-  position: absolute;
-  width: 5rem;
-  height: 3rem;
-  background: var(--neutral-3);
-  border-radius: 5rem;
-  cursor: pointer;
-  transition: all 0.4s;
-  z-index: 100;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 1.8rem;
-}
-
-.toggle-btn .icon {
-  position: absolute;
-  width: 2.6rem;
-  height: 2.6rem;
-  background: var(--neutral-1);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 50%;
-  left: 0.2rem;
-  transform: translateY(-50%);
-  cursor: pointer;
-  font-size: 2rem;
-  color: var(--neutral-400);
-  transition: all 0.4s;
-  filter: drop-shadow(-2px 1px 8px rgba(0, 0, 0, 0.2));
-}
-
-.toggle-btn.active {
-  background: var(--neutral-5);
-  transition: all 0.4s;
-}
-
-.toggle-btn.active .icon {
-  color: var(--neutral-400);
-  left: calc(100% - 55%);
-  transition: all 0.4s;
-}
-
-.contact {
-  grid-area: contact;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-}
-
-.contact img {
-  position: absolute;
-  width: 170px;
-  max-width: 177px;
-  display: flex;
-  top: 50.5%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.contact .frame {
-  display: flex;
-  flex-direction: column;
-  width: 123px;
-  height: 150px;
-  display: flex;
-  border-radius: 35px;
-  padding: 8px 15px;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: relative;
-  background-color: black;
-}
-
-.contact .frame .clock {
-  display: flex;
-  justify-content: space-between;
-  font-weight: 500;
-  align-items: center;
-}
-
-.clock h2 {
-  color: #24a7ff;
-  font-size: 1.2rem;
-}
-.clock span {
-  color: white;
-  font-weight: 400;
-}
-
-.contact .button {
-  border: none;
-  font-weight: 600;
-  font-size: 1.6rem;
-  cursor: pointer;
-  display: flex;
-  background: transparent;
-  padding: 2px;
-}
-
-.contact .button a {
-  border-radius: 8px;
-  width: 11.5rem;
-  padding: 0.5rem;
-  display: flex;
-  padding-left: 10px;
-  background-color: rgba(255, 255, 255, 0.15);
-  transition: 0.3s;
-  position: relative;
-  color: var(--neutral-1);
-  font-size: 1.4rem;
-  font-weight: 300;
-}
-
-.contact .button a:hover {
-  background: var(--neutral-5);
-}
-
-.contact ul {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  text-align: center;
-}
-
-.contact ul li a:nth-child(2) {
-  background-color: #24a7ff;
-}
-
-/* >>>>>>>>>> FOR TABLETS <<<<<<<<<< */
-
-@media (min-width: 768px) {
-  .apple-grid {
-    max-width: 768px;
-    margin: 0 auto;
-    height: fit-content;
-    padding: 1rem;
-    overflow: hidden;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 0.25fr 0.4fr 1fr 0.35fr;
-    grid-template-areas:
-      'profile profile'
-      'resume resume'
-      'stacks mail'
-      'projects projects'
-      'select-mode contact'
-      'select-mode contact';
-  }
-
-  .stacks-icons {
-    margin-bottom: 0.5rem;
-  }
-
-  .hello-message .stroke {
-    width: 440px;
-  }
-
-  .hello-message h2 {
-    font-size: 9.5rem;
-  }
-
-  .stacks .ico {
-    width: 6rem;
-    height: 6rem;
-  }
-
-  .select-mode .avatar img {
-    width: 140px;
-  }
-
-  .select-mode .sun {
-    width: -webkit-fill-available;
-  }
-  .moon {
-    width: -webkit-fill-available;
-  }
-
-  .contact img {
-    position: absolute;
-    width: 185px;
-    display: flex;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-}
-
-/* --------------- MEDIUM DISPLAYS --------------- */
-
-@media (min-width: 996px) {
-  .apple-grid {
-    max-width: 960px;
-    margin: 0 auto;
-    height: 100vh;
-    padding: 4rem 2rem;
-    overflow: hidden;
-    grid-template-columns: 0.5fr 1fr 0.5fr 0.5fr 1.8fr 0.6fr 0.9fr;
-    grid-template-rows: 1fr 1fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
-    grid-template-areas:
-      'profile profile resume resume hello stacks stacks'
-      'profile profile resume resume hello stacks stacks'
-      'profile profile projects projects projects stacks stacks'
-      'profile profile projects projects projects mail mail'
-      'profile profile projects projects projects mail mail'
-      'profile profile projects projects projects select-mode contact'
-      'profile profile projects projects projects select-mode contact';
-  }
-  .hello,
-  .brand,
-  .welcome {
-    display: block;
-  }
-
-  .resume a {
-    font-size: 2.5rem;
-    text-align: center;
-  }
-
-  .hello-message .stroke {
-    width: 270px;
-  }
-
-  .hello-message h2 {
-    font-size: 5.7rem;
-  }
-
-  .swiper-navBtn {
-    display: flex;
-    width: 25px;
-    height: 25px;
-  }
-
-  .card-container {
-    width: 90%;
-    padding: 30px 0;
-  }
-
-  .project-details .name,
-  .stack-details .stack-title,
-  .preview-title {
-    font-size: 1.6rem;
-  }
-
-  .project-details .job {
-    font-size: 1.4rem;
-  }
-
-  .stacks .ico {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 7rem;
-    height: 7rem;
-  }
-
-  .stacks-icons {
-    width: 100%;
-    margin-bottom: -0.9;
-    gap: 0.5rem;
-  }
-
-  .stacks .description p {
-    padding: 1rem;
-  }
-
-  .select-mode .avatar img {
-    width: 100px;
-  }
-
-  .button-copy {
-    width: 93%;
-  }
-
-  .select-mode .sun,
-  .moon {
-    width: 350px;
-  }
-
-  .contact img {
-    width: 170px;
-    top: 50.7%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .apple-grid {
-    max-width: 1515px;
-    height: 100vh;
-    padding: 4rem 10rem;
-    display: grid;
-    place-content: center;
-    gap: 1rem;
-    grid-template-columns: 0.4fr 1fr 0.5fr 0.3fr 1.5fr 0.6fr 0.7fr;
-    /* grid-template-columns: 0.5fr 1fr 0.5fr 0.5fr 1.8fr 0.6fr 0.9fr; BEFORE */
-    grid-template-rows: 1fr 1fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
-    grid-auto-flow: row;
-    grid-template-areas:
-      'profile profile resume resume hello stacks stacks'
-      'profile profile resume resume hello stacks stacks'
-      'profile profile projects projects projects stacks stacks'
-      'profile profile projects projects projects mail mail'
-      'profile profile projects projects projects mail mail'
-      'profile profile projects projects projects select-mode contact'
-      'profile profile projects projects projects select-mode contact';
-  }
-
-  .flip-card {
-    width: 100%;
-    perspective: 3200px;
-    position: relative;
-    background-color: transparent;
-  }
-
-  .flip-card-front,
-  .flip-card-back {
-    background-color: var(--pure-white);
-
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: var(--border-radius);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
-    transition: transform 1s ease-in-out;
-    backface-visibility: hidden;
-
-    box-shadow: 4px 12px 40px 6px rgba(0, 0, 0, 0.09);
-  }
-
-  .flip-card-front {
-    transform: rotateY(0deg);
-  }
-
-  .flip-card-back {
-    transform: rotateY(-180deg);
-  }
-
-  .flip-card-back .title {
-    color: var(--neutral-3);
-  }
-
-  .flip-card.flip .flip-card-front {
-    transform: rotateY(180deg);
-  }
-
-  .flip-card.hover .flip-card-front {
-    transform: rotateY(15deg);
-  }
-
-  .flip-card.flip .flip-card-back {
-    transform: rotateY(0deg);
-  }
-
-  .close-icon img {
-    transform: rotate(135deg);
-  }
-  .plus-icon,
-  .close-icon {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    border: none;
-    background-color: transparent;
-  }
-
-  .resume {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .resume-block {
-    width: 100%;
-    height: 9rem;
-    background-color: var(--neutral-3);
-    border-radius: 1.8rem;
-    display: flex;
-    align-items: center;
-    gap: 0.8rem;
-    transition: 500ms ease-in-out;
-    padding: 0.3rem;
-  }
-
-  .resume-block:hover {
-    background-color: var(--neutral-4);
-  }
-
-  .above-block {
-    width: 75%;
-    height: 100%;
-    background-color: var(--neutral-2);
-    border-radius: 1.6rem;
-    display: flex;
-    align-items: center;
-    border: 1px solid var(--neutral-3);
-  }
-
-  .above-block span {
-    font-size: 2.4rem;
-    text-align: center;
-    font-weight: bold;
-    color: var(--neutral-6);
-  }
-
-  .brand-block {
-    display: flex;
-    width: 100%;
-    height: 8rem;
-    border: 1px solid var(--neutral-4);
-    background-color: var(--neutral-2);
-    border-radius: 1.8rem;
-    align-items: center;
-    padding: 1rem;
-  }
-
-  .brand-block img {
-    height: 6rem;
-  }
-
-  .hello {
-    display: block;
-  }
-
-  .hello-message .stroke {
-    width: 320px;
-  }
-
-  .hello-message h2 {
-    font-size: 6.7rem;
-    font-weight: 900;
-  }
-
-  .card-container {
-    max-width: 1120px;
-    width: 100%;
-    padding: 5rem 0;
-  }
-
-  .slide-container {
-    margin: 0 3rem;
-    overflow: hidden;
-  }
-
-  .button-copy {
-    width: 94%;
-    position: absolute;
-    bottom: 10px;
-  }
-
-  .contact .frame {
-    width: 125px;
-    height: 150px;
-  }
-
-  .contact img {
-    position: absolute;
-    width: 170px;
-    max-width: 177px;
-    display: flex;
-    flex-direction: column;
-    top: 50.5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  .select-mode .avatar img {
-    width: 115px;
-  }
-
-  .select-mode .sun,
-  .moon {
-    width: fit-content;
-  }
-
-  .projects .card-slide {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr auto;
-    grid-template-areas:
-      'image image'
-      'description description';
-    width: 400px;
-    height: 100%;
-    background-color: var(--neutral-1);
-    border-radius: 1.8rem;
-    padding: 0.5rem;
-    border: 1px solid var(--neutral-4);
-    gap: 0.5rem;
-  }
-
-  .card-slide .image-box {
-    grid-area: image;
-  }
-  .card-slide .image-box img {
-    width: 100%;
-    border-radius: 1.2rem;
-  }
-
-  .card-slide .project-details {
-    grid-area: description;
-  }
-  .card-slide .project-details {
-    padding: 1rem 1rem 2rem 1rem;
-    background-color: var(--neutral-2);
-    border-radius: 1.2rem;
-  }
-
-  .card-slide .stack-icons,
-  .card-slide .preview-icons {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.3rem;
-  }
-
-  .card-slide .stack-icons span,
-  .card-slide .preview-icons a {
-    border: 1px solid var(--neutral-5);
-    padding: 0.4rem;
-    border-radius: 0.4rem;
-    font-size: 1.2rem;
-  }
-
-  .card-slide .info-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 'stack preview';
-    gap: 1rem;
-  }
-
-  .card-slide .stack-details {
-    grid-area: stack;
-  }
-  .card-slide .project-preview {
-    grid-area: preview;
-  }
-
-  .card-slide .name-job {
-    margin-bottom: 1rem;
-  }
-  .card-slide .name-job .name {
-    margin-bottom: 0.5rem;
-  }
-  .card-slide .name-job p {
-    font-size: 1.4rem;
-  }
-
-  .card-slide .name-job .name {
-    font-size: 1.8rem;
-    color: var(--neutral-7);
-  }
-  .card-slide .stack-title,
-  .card-slide .preview-title {
-    margin-bottom: 1rem;
-    color: var(--neutral-7);
-  }
-
-  .card-slide .preview-icons a:visited {
-    color: var(--neutral-7);
-  }
+  grid-template-columns: 0.7fr 0.3fr 1fr 1fr;
+  grid-template-rows: 1fr 0.8fr 0.8fr;
+  grid-template-areas: '';
 }
 
 /*-----------------DARK MODE -------------------*/
