feat: styling bento grid design

--- a/style.css
+++ b/style.css
@@ -8,20 +8,19 @@ html,
 body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+  background-color: var(--neutral-2);
 }
 
 :root {
   font-family: 'Inter', sans-serif;
   font-size: 62.5%; /* 1rem === 10px*/
 
-  --neutral-8: #000000;
-  --neutral-7: #1d1d1f;
-  --neutral-6: #696969;
-  --neutral-5: #929292;
-  --neutral-4: #dfe0e2;
-  --neutral-3: #ededed;
-  --neutral-2: #f8f8f8;
-  --neutral-1: #ffffff;
+  --neutral-6: #000000;
+  --neutral-5: #1d1d1f;
+  --neutral-4: #86868b;
+  --neutral-3: #d1d0d6;
+  --neutral-2: #f5f5f7;
+  --neutral: #ffffff;
 
   --border-radius: 2.4rem;
 }
@@ -36,21 +35,22 @@ li {
 }
 
 .card {
-  background-color: var(--neutral-3);
+  background-color: var(--neutral);
   border-radius: var(--border-radius);
+  padding: 1rem;
 }
 
-.bento-grid {
-  width: 100vw;
-  max-width: 1440px;
-  height: fit-content;
-  padding: 2.5rem;
+/* ---------- ESTILOS DESKTOP ---------- */
+.container-grid {
+  /* max-width: 1440px; */
+  height: 100vh;
+  padding: 4rem;
   margin: 0 auto;
   display: grid;
   place-content: center;
   gap: 1rem;
   overflow: hidden;
-  grid-template-columns: 0.7fr 0.3fr 1fr 1fr;
+  grid-template-columns: 0.5fr 0.4fr 0.9fr 1.1fr;
   grid-template-rows: 1fr 0.8fr 0.8fr;
   grid-template-areas:
     'contacts contacts profile projects'
@@ -60,6 +60,7 @@ li {
 
 .profile {
   grid-area: profile;
+  background-color: var(--neutral-5);
 }
 
 .projects {
@@ -68,19 +69,27 @@ li {
 
 .contacts {
   grid-area: contacts;
+  background: linear-gradient(196deg, #e4e5ea 30%, #91859b);
 }
 
 .skills {
+  background-color: transparent;
   grid-area: skills;
+  border: dashed 2px var(--neutral-3);
 }
 
 .resume {
   grid-area: resume;
+  background-color: var(--neutral-5);
 }
 
-.theme-mode {
+.theme {
   grid-area: theme-mode;
+  background: linear-gradient(#094782, #4d8ac1);
 }
+
+/* ---------- FINAL ESTILOS DESKTOP ---------- */
+
 /*-----------------DARK MODE -------------------*/
 
 body.dark {
