--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
   --neutral-2: #f5f5f7;
   --neutral: #ffffff;
 
+  --active-button: #36c84b;
+
   --border-radius: 2.4rem;
 }
 
@@ -37,6 +39,9 @@ li {
 .card {
   background-color: var(--neutral);
   border-radius: var(--border-radius);
+}
+
+.pd-1 {
   padding: 1rem;
 }
 
@@ -50,7 +55,7 @@ li {
   place-content: center;
   gap: 1rem;
   overflow: hidden;
-  grid-template-columns: 0.5fr 0.4fr 0.9fr 1.1fr;
+  grid-template-columns: 0.55fr 0.38fr 0.9fr 1.1fr;
   grid-template-rows: 1fr 0.8fr 0.8fr;
   grid-template-areas:
     'contacts contacts profile projects'
@@ -60,11 +65,20 @@ li {
 
 .profile {
   grid-area: profile;
+  overflow: hidden;
+}
+
+.profile .flip-card {
+  display: flex;
   background-color: var(--neutral-5);
+  height: 100%;
+  padding: 1rem;
 }
 
 .projects {
   grid-area: projects;
+  display: flex;
+  justify-content: center;
 }
 
 .contacts {
@@ -75,7 +89,7 @@ li {
 .skills {
   background-color: transparent;
   grid-area: skills;
-  border: dashed 2px var(--neutral-3);
+  border: solid 1px var(--neutral-3);
 }
 
 .resume {
@@ -86,6 +100,48 @@ li {
 .theme {
   grid-area: theme-mode;
   background: linear-gradient(#094782, #4d8ac1);
+  position: relative;
+}
+
+.toggle-btn {
+  position: absolute;
+  width: 5rem;
+  height: 3rem;
+  background: var(--neutral-2);
+  border-radius: 5rem;
+  cursor: pointer;
+  transition: all 0.4s;
+  z-index: 100;
+  right: 1rem;
+}
+
+.toggle-btn .circle {
+  position: absolute;
+  width: 2.7rem;
+  height: 2.7rem;
+  background: var(--neutral);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 0.2rem;
+  transform: translateY(-50%);
+  cursor: pointer;
+
+  transition: all 0.4s;
+  filter: drop-shadow(1px 1px 8px rgba(0, 0, 0, 0.1));
+}
+
+.toggle-btn.active {
+  background: var(--active-button);
+  transition: all 0.4s;
+}
+
+.toggle-btn.active .circle {
+  color: var(--neutral);
+  left: calc(100% - 59%);
+  transition: all 0.4s;
 }
 
 /* ---------- FINAL ESTILOS DESKTOP ---------- */
