--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html,
 body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  background-color: var(--neutral-2);
+  background-color: var(--neutral-1);
 }
 
 :root {
@@ -19,10 +19,11 @@ body {
   --neutral-5: #1d1d1f;
   --neutral-4: #86868b;
   --neutral-3: #d1d0d6;
-  --neutral-2: #f5f5f7;
-  --neutral: #ffffff;
+  --neutral-2: #ececec;
+  --neutral-1: #ffffff;
 
-  --active-button: #36c84b;
+  --active-button: #34c759;
+  --disable-button: #e9e9ea;
 
   --border-radius: 2.4rem;
 }
@@ -37,7 +38,7 @@ li {
 }
 
 .card {
-  background-color: var(--neutral);
+  background-color: var(--neutral-2);
   border-radius: var(--border-radius);
 }
 
@@ -45,35 +46,154 @@ li {
   padding: 1rem;
 }
 
-/* ---------- ESTILOS DESKTOP ---------- */
+/* ----------------------------- ESTILOS DESKTOP ----------------------------- */
 .container-grid {
-  /* max-width: 1440px; */
+  max-width: 1440px;
   height: 100vh;
-  padding: 4rem;
+  padding: 4rem 2rem;
   margin: 0 auto;
   display: grid;
   place-content: center;
   gap: 1rem;
   overflow: hidden;
-  grid-template-columns: 0.55fr 0.38fr 0.9fr 1.1fr;
+  grid-template-columns: 0.45fr 0.38fr 0.9fr 1.1fr;
   grid-template-rows: 1fr 0.8fr 0.8fr;
   grid-template-areas:
     'contacts contacts profile projects'
     'skills skills profile projects'
-    'resume theme-mode profile projects';
+    'resume select-mode profile projects';
 }
+
+/* --------------------------------- PROFILE --------------------------------- */
 
 .profile {
   grid-area: profile;
-  overflow: hidden;
+  position: relative;
+  perspective: 1800px;
+  background-color: transparent;
 }
 
-.profile .flip-card {
-  display: flex;
-  background-color: var(--neutral-5);
-  height: 100%;
-  padding: 1rem;
+.profile .front-card,
+.back-card {
+  position: relative;
 }
+
+.profile .plus-icon {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.plus-icon svg path {
+  fill: var(--neutral-3);
+}
+
+.profile .back-card .close-icon {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  transform: rotate(45deg);
+}
+
+.close-icon svg path {
+  fill: var(--neutral-4);
+}
+
+.single-card {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: all 1.5s cubic-bezier(0.7, -0.5, 0.3, 1);
+  transform-style: preserve-3d;
+}
+
+.profile.active .single-card {
+  transform: rotateY(180deg);
+}
+
+.front-card,
+.back-card {
+  width: 100%;
+  position: relative;
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+}
+
+.front-card {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: var(--neutral-5);
+  border-radius: var(--border-radius);
+}
+
+.back-card {
+  transform: rotateY(180deg);
+  position: absolute;
+  height: 100%;
+  background-color: var(--neutral-1);
+  border-radius: var(--border-radius);
+}
+
+.front-card .availability {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.front-card .status {
+  background-color: rgba(54, 200, 75, 0.2);
+  padding: 0.5rem 1rem 0.5rem 2.2rem;
+  border-radius: var(--border-radius);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.front-card .availability p {
+  color: #36c84b;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.front-card .availability::after {
+  content: '';
+  width: 6px;
+  height: 6px;
+  background-color: #36c84b;
+
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  border-radius: 10px;
+
+  transform: translateY(-50%);
+}
+
+.back-card .text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem 3rem;
+}
+
+.back-card .text p {
+  font-size: 1.6rem;
+  text-align: left;
+  color: var(--neutral-4);
+}
+
+/* -------------------------------- PROJECTS -------------------------------- */
 
 .projects {
   grid-area: projects;
@@ -81,33 +201,155 @@ li {
   justify-content: center;
 }
 
+/* -------------------------------- CONTACTS -------------------------------- */
+
 .contacts {
   grid-area: contacts;
-  background: linear-gradient(196deg, #e4e5ea 30%, #91859b);
 }
 
+/* --------------------------------- SKILLS ---------------------------------- */
+
 .skills {
-  background-color: transparent;
   grid-area: skills;
-  border: solid 1px var(--neutral-3);
+  position: relative;
 }
+
+.skills-title {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.skills-title .content {
+  background-color: rgba(56, 139, 253, 0.15);
+  padding: 0.5rem 1rem 0.5rem 2.2rem;
+  border-radius: var(--border-radius);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: calc();
+}
+
+.content p {
+  color: rgb(88, 166, 255);
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.skills-title .content::after {
+  content: '';
+  width: 6px;
+  height: 6px;
+  background-color: rgb(88, 166, 255);
+
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  border-radius: 10px;
+
+  transform: translateY(-50%);
+}
+
+.skills-container ul {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  margin-top: 4.5rem;
+}
+
+.skills-container ul li {
+  padding: 1rem 1.5rem;
+  border-radius: 3rem;
+  display: inline-block;
+  font-size: 1.8rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: var(--neutral-1);
+  background-color: var(--neutral-5);
+}
+
+/* --------------------------------- RESUME ---------------------------------- */
 
 .resume {
   grid-area: resume;
   background-color: var(--neutral-5);
 }
 
-.theme {
-  grid-area: theme-mode;
-  background: linear-gradient(#094782, #4d8ac1);
+.resume img {
+  margin: 0.2rem 0.5rem;
+}
+
+/* -------------------------------- THEME MODE ------------------------------- */
+
+.select-mode {
+  display: flex;
+  grid-area: select-mode;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
   position: relative;
+  transition: all 1s;
+  background: linear-gradient(#094782, #4d8ac1);
+}
+
+.select-mode.night {
+  transition: all 1s;
+  background: linear-gradient(#030417, #2b3552);
+}
+
+.select-mode .avatar {
+  position: absolute;
+  top: 55%;
+  transform: translateY(-50%);
+  perspective: 1000px;
+}
+
+.memoji-face {
+  transition: all 1.5s cubic-bezier(0.7, -0.5, 0.3, 1.8);
+  transform-style: preserve-3d;
+}
+
+.avatar.active .memoji-face {
+  transform: rotateY(180deg);
+}
+
+.front,
+.back {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+}
+
+.front {
+  width: 15rem;
+  backface-visibility: hidden;
+}
+
+.back {
+  transform: rotateY(180deg);
+  position: absolute;
+}
+
+.select-mode .avatar img {
+  width: 100%;
+  transition: all 1s;
 }
 
 .toggle-btn {
   position: absolute;
   width: 5rem;
   height: 3rem;
-  background: var(--neutral-2);
+  background: var(--disable-button);
   border-radius: 5rem;
   cursor: pointer;
   transition: all 0.4s;
@@ -119,7 +361,7 @@ li {
   position: absolute;
   width: 2.7rem;
   height: 2.7rem;
-  background: var(--neutral);
+  background: var(--neutral-1);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -128,9 +370,8 @@ li {
   left: 0.2rem;
   transform: translateY(-50%);
   cursor: pointer;
-
   transition: all 0.4s;
-  filter: drop-shadow(1px 1px 8px rgba(0, 0, 0, 0.1));
+  /* filter: drop-shadow(1px 1px 8px rgba(0, 0, 0, 0.1)); */
 }
 
 .toggle-btn.active {
@@ -139,14 +380,15 @@ li {
 }
 
 .toggle-btn.active .circle {
-  color: var(--neutral);
-  left: calc(100% - 59%);
+  color: var(--neutral-1);
+  left: calc(100% - 57%);
   transition: all 0.4s;
+  /* filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.1)); */
 }
 
-/* ---------- FINAL ESTILOS DESKTOP ---------- */
+/* -------------------------- FINAL ESTILOS DESKTOP ------------------------- */
 
-/*-----------------DARK MODE -------------------*/
+/*---------------------------------DARK MODE ---------------------------------*/
 
 body.dark {
   background-color: var(--neutral-8);
